add --add-opens, needed for module refresh